opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-prometheus"
bug-reports: "https://github.com/vbmithr/ocaml-prometheus/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-prometheus"
doc: "https://vbmithr.github.io/ocaml-prometheus/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
depends: [
  "dune" {>= "1.11.4"}
  "fmt" {>= "0.8.8"}
  "ptime" {>= "0.8.5"}
  "containers" {>= "2.8"}
  "alcotest" {with-test & >= "0.8.5"}
]
synopsis: "Types and pretty printer for Prometheus' text-based exposition format"
description: """
"""
